# Pilgrim

./: .gitignore  LICENSE_MIT  README.rst  asm_patch_list.yml  pyproject.toml
pilgrim/: config.yml
pmdsky_pilgrim/: __init__.py  __main__.py  pilgrim.py
pmdsky_pilgrim/template_project/: config.yml
pmdsky_pilgrim/tests/: asm_patch_test.py  bg_list_test.py  compare_test.py  special_process_converter_test.py
pmdsky_pilgrim/tools/: asm_patch.py  asm_patch_test.py  bg_list.py  bg_list_test.py  colors.py  compare.py  compare_test.py  config_loader.py  find_offset.py  hash_validation.py  project_loader.py  special_process_converter.py  special_process_converter_test.py
tools/: asm_patch.py  asm_patch_test.py  bg_list_test.py  compare.py  config_loader.py  special_process_converter.py
