[build-system]
requires = ["flit_core >=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "pilgrim"
authors = [
    {name = "Chesyon"},
]
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["rom-hacking", "game-modding", "skytemple"]
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "capstone >= 4.0.0"
    "ndspy >= 3.0.0",
    "skytemple-files >= 1.8.5",
]
