[build-system]
requires = ["flit_core >=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "pmdsky-pilgrim"
version = "0.0.0"
authors = [
    {name = "Chesyon"},
]
description = "Tool to port EU ROMhacks of PMD:EoS to the NA release"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["rom-hacking", "game-modding", "skytemple"]
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "capstone >= 4.0.0",
    "ndspy >= 3.0.0",
    "skytemple-files >= 1.8.5",
    "pmdsky-debug-py >= 10.0.0",
    "PyYAML >= 6.0.0",
]

[project.scripts]
pmdsky-pilgrim = "pmdsky_pilgrim.__main__:cli"

[project.urls]
Repository = "https://github.com/Chesyon/Pilgrim"
Issues = "https://github.com/Chesyon/Pilgrim/issues"

[tool.ruff]
line-length = 120